# dolla

./: .dockerignore  .gitignore  .golangci.yaml  Makefile  README.md  biome.json  compose.yaml  example.env  go.work  go.work.sum  package.json  pnpm-lock.yaml
.github/: dependabot.yaml
.github/workflows/: cd.yaml  go-ci.yaml  py-ci.yaml  ts-ci.yaml
apps/backend/: .golangci.yaml  Dockerfile  Dockerfile.dev  go.mod  go.sum
apps/backend/cmd/: main.go
apps/backend/gpt/: gpt.go
apps/backend/gpt/api/: endpoints.go  requests.go  transport.go
apps/dashboard/: Dockerfile  example.env  next.config.mjs  package.json
apps/dashboard/app/: layout.tsx  sitemap.ts
apps/dashboard/components/: app-sidebar.tsx  budget-alerts.tsx  budget-table.tsx  create-budget-dialog.tsx  create-expense-dialog.tsx  create-income-dialog.tsx  delete-expense-dialog.tsx  delete-income-dialog.tsx  edit-expense-dialog.tsx  edit-income-dialog.tsx  nav-header.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  onboarding-guard.tsx  providers.tsx  theme-switcher.tsx  upload-statement-dialog.tsx
apps/dashboard/constants/: categories.ts  payment-methods.ts
apps/dashboard/hooks/: use-onboarding.ts
apps/dashboard/lib/: api.ts
apps/dashboard/types/: schema.ts
apps/pdf-extractor/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/pdf-extractor/app/: main.py
apps/web/: Dockerfile  next.config.mjs  package.json
apps/web/app/: layout.tsx  page.tsx  sitemap.ts
apps/web/components/: features-5.tsx  footer.tsx  header.tsx  hero-section.tsx  integrations-4.tsx
(+49 files in other folders)
