[project]
name = "pdf-extractor"
version = "0.1.0-alpha.2"
description = "Simple microservice to extract text and tables from a PDF file."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.14",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "ty>=0.0.1a13",
]
